maud/tests/warnings/non-closed-element.stderr
error: expected `;`, found end of macro
 --> $DIR/non-closed-element.rs:4:5
  |
4 | /     html! {
5 | |         p
6 | |     };
  | |_____^
  |
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
