maud/tests/warnings/non-closed-element.rs
use maud::html;

fn main() {
    html! {
        p
    };
}
